<resources>
    <string name="app_name">ToolsBox</string>

    <string name="normal_toast_with_icon">NORMAL TOAST (WITH ICON)</string>
    <string name="normal_toast_without_icon">NORMAL TOAST (WITHOUT ICON)</string>
    <string name="warning_toast">WARNING TOAST</string>
    <string name="info_toast">INFO TOAST</string>
    <string name="info_toast_with_formatting">INFO TOAST WITH FORMATTING</string>
    <string name="error_toast">ERROR TOAST</string>
    <string name="success_toast">SUCCESS TOAST</string>
    <string name="custom_configuration">CUSTOM CONFIGURATION</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
