<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragment.SecondFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_error_toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_toast" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/button_success_toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success_toast" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/button_info_toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_toast" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/button_info_toast_with_formatting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_toast_with_formatting" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/button_warning_toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warning_toast" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/button_normal_toast_wo_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal_toast_without_icon" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/button_normal_toast_w_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal_toast_with_icon" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/button_custom_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_configuration" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
